# learnai

./: app.py  dependencies.txt  requirements.txt
app-etl-rag/: README.md  pyproject.toml
app-etl-rag/chroma_db/: chroma.sqlite3
app-etl-rag/src/app_etl_rag/: __init__.py  config.py  rag_ingestion.py  similarity_search.py
app-etl-rag/src/app_etl_rag/chunking/: text_splitter.py
app-etl-rag/src/app_etl_rag/embeddings/: embedding_model.py
app-etl-rag/src/app_etl_rag/loaders/: pdf_loader.py
app-etl-rag/src/app_etl_rag/vectorstores/: chroma_store.py
day01/: README.md
day02/: README.md
day03/: README.md  app.py  day3commands.txt
day04/: README.md  app.py  day04.csv  day04.json
day05/: README.md  app.py  chat_app.py  chat_bot_app.py  conversation.json  new_app_chatbot.py
day06/: README.md  new_app_chatbot.py
day07/: README.md  basicscoreprediction.py  decisiontreereg.py  kcluster.py
day08/: app.py  app_100recs.py
day08/chroma_db/: chroma.sqlite3
day09/: README.md  app.py
day10/: README.md  app.py  app12.py  app2.py  app4.py  app5.py  app6.py  app7.py  app8.py  app9.py  llm_chk.m4a
day11/: README.md
myapp/: pyproject.toml
